[tool.poetry]
name = "torchreid"
version = "1.4.0"
description = "A library for deep learning person re-ID in PyTorch"
authors = ["Kaiyang Zhou <EMAIL_PLACEHOLDER>"]
license = "MIT"
homepage = "https://github.com/KaiyangZhou/deep-person-reid"
readme = "README.rst"
keywords = ["Person Re-Identification", "Deep Learning", "Computer Vision"]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "1.23.5"
Cython = "0.29.34"
h5py = "3.8.0"
Pillow = "10.2.0"
six = "1.16.0"
scipy = "1.11.4"
opencv-python = "4.7.0.72"
matplotlib = "3.8.3"
tb-nightly = "2.14.0a20230523"
future = "0.18.3"
yacs = "0.1.8"
gdown = "5.1.0"
flake8 = "6.0.0"
yapf = "0.33.0"
isort = "4.321"
imageio = "2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
torchreid = "torchreid.__main__:main"

